--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -172,10 +172,10 @@
 
                 <TextView
                     android:id="@+id/textView5"
-                    android:layout_width="263dp"
+                    android:layout_width="350dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Fridge Temperature" />
+                    android:text="Fridge Temperature: 37° F" />
 
                 <SeekBar
                     android:id="@+id/seekBar"
@@ -198,10 +198,10 @@
 
                 <TextView
                     android:id="@+id/textView4"
-                    android:layout_width="263dp"
+                    android:layout_width="350dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Freezer Temperature" />
+                    android:text="Freezer Temperature: 0° F" />
 
                 <SeekBar
                     android:id="@+id/seekBar4"
