--- a/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/app/src/main/res/layout/fragment_shopping_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,38 +13,71 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="Shopping List"
-                android:textSize="30sp" />
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="10dp" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Item                                        Amount                                  Bought?" />
-
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="5dp" />
+
+            <LinearLayout
+                android:id="@+id/table_header_row_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/floatingActionButtonGhost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    android:visibility="invisible"
+                    app:backgroundTint="?attr/colorBackgroundFloating" />
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="25dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="20"
+                    android:text="  Item"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+
+                <TextView
+                    android:id="@+id/textView90"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="20"
+                    android:text="Amount"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+
+                <TextView
+                    android:id="@+id/textView21"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Bought?"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/floatingActionButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    app:backgroundTint="?attr/colorBackgroundFloating"
+                    app:srcCompat="@android:drawable/ic_menu_delete" />
+
                 <TextView
                     android:id="@+id/textView6"
                     android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="20"
-                    android:text="Bread" />
+                    android:text="  Bread" />
 
                 <TextView
                     android:id="@+id/textView8"
@@ -69,12 +103,21 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/floatingActionButton2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    app:backgroundTint="?attr/colorBackgroundFloating"
+                    app:srcCompat="@android:drawable/ic_menu_delete" />
+
                 <TextView
                     android:id="@+id/textView61"
                     android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="20"
-                    android:text="Yogurt" />
+                    android:text="  Yogurt" />
 
                 <TextView
                     android:id="@+id/textView9"
@@ -100,12 +143,21 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/floatingActionButton3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    app:backgroundTint="?attr/colorBackgroundFloating"
+                    app:srcCompat="@android:drawable/ic_menu_delete" />
+
                 <TextView
                     android:id="@+id/textView62"
                     android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="20"
-                    android:text="Ice Cream" />
+                    android:text="  Ice Cream" />
 
                 <TextView
                     android:id="@+id/textView10"
@@ -131,12 +183,21 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/floatingActionButton4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    app:backgroundTint="?attr/colorBackgroundFloating"
+                    app:srcCompat="@android:drawable/ic_menu_delete" />
+
                 <TextView
                     android:id="@+id/textView63"
                     android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="20"
-                    android:text="Tofu" />
+                    android:text="  Tofu" />
 
                 <TextView
                     android:id="@+id/textView11"
@@ -162,12 +223,21 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/floatingActionButton5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    app:backgroundTint="?attr/colorBackgroundFloating"
+                    app:srcCompat="@android:drawable/ic_menu_delete" />
+
                 <TextView
                     android:id="@+id/textView64"
                     android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="20"
-                    android:text="Cilantro" />
+                    android:text="  Cilantro" />
 
                 <TextView
                     android:id="@+id/textView12"
@@ -193,12 +263,21 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/floatingActionButton6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    app:backgroundTint="?attr/colorBackgroundFloating"
+                    app:srcCompat="@android:drawable/ic_menu_delete" />
+
                 <TextView
                     android:id="@+id/textView65"
                     android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="20"
-                    android:text="Avocado" />
+                    android:text="  Avocado" />
 
                 <TextView
                     android:id="@+id/textView13"
@@ -224,12 +303,21 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/floatingActionButton7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    app:backgroundTint="?attr/colorBackgroundFloating"
+                    app:srcCompat="@android:drawable/ic_menu_delete" />
+
                 <TextView
                     android:id="@+id/textView66"
                     android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="20"
-                    android:text="Lemons" />
+                    android:text="  Lemons" />
 
                 <TextView
                     android:id="@+id/textView14"
@@ -255,12 +343,21 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/floatingActionButton8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    app:backgroundTint="?attr/colorBackgroundFloating"
+                    app:srcCompat="@android:drawable/ic_menu_delete" />
+
                 <TextView
                     android:id="@+id/textView67"
                     android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="20"
-                    android:text="Beans" />
+                    android:text="  Beans" />
 
                 <TextView
                     android:id="@+id/textView15"
@@ -286,12 +383,21 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/floatingActionButton9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    app:backgroundTint="?attr/colorBackgroundFloating"
+                    app:srcCompat="@android:drawable/ic_menu_delete" />
+
                 <TextView
                     android:id="@+id/textView68"
                     android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="20"
-                    android:text="Kimchi" />
+                    android:text="  Kimchi" />
 
                 <TextView
                     android:id="@+id/textView16"
@@ -317,12 +423,21 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/floatingActionButton10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:clickable="true"
+                    app:backgroundTint="?attr/colorBackgroundFloating"
+                    app:srcCompat="@android:drawable/ic_menu_delete" />
+
                 <TextView
                     android:id="@+id/textView69"
                     android:layout_width="25dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="20"
-                    android:text="Quinoa" />
+                    android:text="  Quinoa" />
 
                 <TextView
                     android:id="@+id/textView17"
