--- a/app/src/main/res/layout/fragment_add_to_inventory.xml
+++ b/app/src/main/res/layout/fragment_add_to_inventory.xml
@@ -76,18 +76,36 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:hint="Item name"/>
-            <EditText
-                android:id="@+id/add_to_inventory_owner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:hint="Owner"/>
+
             <EditText
                 android:id="@+id/add_to_inventory_amount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:hint="Amount"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text=" Owner: "
+                    android:textSize="21sp"/>
+                <Spinner
+                    android:id="@+id/add_to_inventory_owner"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_horizontal"
+                    android:textDirection="firstStrongLtr"
+                    android:hint="Owner" />
+
+            </LinearLayout>
+
+
+
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
