--- a/app/src/main/res/layout/fragment_display_inventory.xml
+++ b/app/src/main/res/layout/fragment_display_inventory.xml
@@ -10,49 +10,194 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="EDIT YOUR ITEM"
+            android:textSize="25dp"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:layout_marginTop="60dp"/>
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_weight="4">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/text_display_inventory"
-                android:layout_width="match_parent"
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:textSize="20sp"/>
+                android:orientation="vertical">
+
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="90dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:textAlignment="textEnd"
+                    android:layout_height="wrap_content"
+                    android:text="Item Name:"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="11dp"
+                    android:textSize="20sp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:textAlignment="textEnd"
+                    android:layout_height="wrap_content"
+                    android:text="Amount:"
+                    android:textSize="20sp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="11dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:textAlignment="textEnd"
+                    android:layout_height="wrap_content"
+                    android:text="Owner:"
+                    android:textSize="20sp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="11dp"/>
+
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_weight="4"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+
+
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="90dp"/>
+
+                <EditText
+                    android:id="@+id/fragment_display_edit_text_name"
+                    android:layout_width="match_parent"
+                    android:textAlignment="textStart"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:ems="6"
+                    android:inputType="text"
+                    android:textSize="20sp"
+
+                    android:layout_marginEnd="25dp"/>
+
+                <EditText
+                    android:id="@+id/fragment_display_edit_amount"
+                    android:layout_width="match_parent"
+                    android:textAlignment="textStart"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:ems="6"
+                    android:textSize="20sp"
+                    android:inputType="number"
+                    android:layout_marginEnd="25dp"/>
+
+                <Spinner
+                    android:id="@+id/fragment_display_spinner_user"
+                    android:layout_width="match_parent"
+                    android:textAlignment="textStart"
+                    android:layout_height="40dp"
+                    android:textSize="20sp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="25dp"/>
+
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
-        <LinearLayout
+
+
+        <!--LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_weight="1">
+            android:orientation="horizontal">
+
+
 
             <Button
-                android:id="@+id/delete_display_inventory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/fragment_display_btn_done"
+                android:layout_width="0dp"
                 android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:layout_marginTop="140dp"
+                android:background="@drawable/rounded_corner_button"
+                android:text="Done"
+                android:textColor="@color/colorWhite"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="10dp"
+                />
+
+            <Button
+                android:id="@+id/fragment_display_btn_cancel"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:layout_marginTop="140dp"
+                android:background="@drawable/rounded_corner_button"
+                android:text="Cancel"
+                android:textColor="@color/colorWhite"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="40dp"
+                />
+
+            <Button
+                android:id="@+id/fragment_display_btn_delete"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:layout_marginTop="140dp"
+                android:background="@drawable/rounded_corner_button"
                 android:text="Delete"
-                android:background="@color/colorPrimary"
-                android:layout_gravity="center_horizontal|center_vertical"/>
+                android:textColor="@color/colorWhite"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="40dp"
+                />
+        </LinearLayout-->
 
-            <Button
-                android:id="@+id/return_display_inventory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Return"
-                android:background="@color/colorPrimary"
-                android:layout_gravity="center_horizontal|center_vertical"/>
 
-        </LinearLayout>
+
 
 
 
     </LinearLayout>
+
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation_display_inventory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_nav_display_inventory"
+        android:background="@color/black"
+        />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
