--- a/app/src/main/res/layout/fragment_user_parameters.xml
+++ b/app/src/main/res/layout/fragment_user_parameters.xml
@@ -17,7 +17,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/rounded_corner_button"
             android:layout_marginBottom="5dp"/>
 
         <Button
@@ -28,7 +28,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/rounded_corner_button"
             android:layout_marginBottom="5dp"
             />
 
@@ -40,7 +40,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/rounded_corner_button"
             android:layout_marginBottom="5dp"/>
 
         <Button
@@ -51,7 +51,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/rounded_corner_button"
             android:layout_marginBottom="5dp"/>
 
         <Button
@@ -62,7 +62,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/rounded_corner_button"
             android:layout_marginBottom="5dp"/>
 
         <Button
@@ -73,7 +73,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/rounded_corner_button"
             android:layout_marginBottom="5dp"/>
 
 
