--- a/app/src/main/res/layout/fragment_display_note.xml
+++ b/app/src/main/res/layout/fragment_display_note.xml
@@ -26,29 +26,50 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_weight="1">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/delete_display_note"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="Delete"
-                android:background="@color/colorPrimary"
-                android:layout_gravity="center_horizontal|center_vertical"/>
+                />
 
-            <Button
-                android:id="@+id/return_display_note"
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Return"
-                android:background="@color/colorPrimary"
-                android:layout_gravity="center_horizontal|center_vertical"/>
+                android:orientation="horizontal"
+                android:gravity="bottom">
+
+
+
+
+
+                <Button
+                    android:id="@+id/delete_display_note"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Delete"
+                    android:background="@color/black"
+                    android:layout_gravity="center_horizontal|center_vertical"/>
+
+                <Button
+                    android:id="@+id/return_display_note"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Return"
+                    android:background="@color/black"
+                    android:layout_gravity="center_horizontal|center_vertical"/>
+
+            </LinearLayout>
 
         </LinearLayout>
+
+
 
 
 
