--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="Hello Lauren"
+            android:textAlignment="center"
+            android:textSize="28sp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="22sp"
+            android:textAlignment="center"
+            android:text="Your Fridge is currently at 40°F (4°C)"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+
+            android:layout_marginTop="40dp"
+            android:text="Alerts"
+            android:textAlignment="center"
+            android:textSize="28sp"/>
+
+        <ListView
+            android:id="@+id/home_alert_notes"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center_horizontal"
+            android:background="@drawable/rounded_corner_button3"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+
+            android:layout_marginTop="40dp"
+            android:text="Shopping Lists"
+            android:textAlignment="center"
+            android:textSize="28sp"/>
+
+        <ListView
+            android:id="@+id/home_shopping_lists"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center_horizontal"
+            android:background="@drawable/rounded_corner_button5"
+            />
 
 
-    <android.support.v7.widget.LinearLayoutCompat
+
+    </LinearLayout>
+
+
+
+
+
+
+    <!--android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_height="match_parent">
@@ -23,6 +83,6 @@
         </ListView>
 
 
-    </android.support.v7.widget.LinearLayoutCompat>
+    </android.support.v7.widget.LinearLayoutCompat-->
 
-</RelativeLayout>
+</ScrollView>
